--- a/yeti/variables.less
+++ b/yeti/variables.less
@@ -393,7 +393,7 @@
 //##
 
 //=== Shared nav styles
-@nav-link-padding:                          10px 10px;
+@nav-link-padding:                          8px 8px;
 @nav-link-hover-bg:                         @gray-lighter;
 
 @nav-disabled-link-color:                   @gray-light;
